# rust-tauri-markdown-editor

./: README.md  package-lock.json
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
